# echopulsing

./: .env.example  .gitignore  DOCUMENTATION_GUIDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
echopulsing/: __init__.py  config.py  main.py
echopulsing/handlers/: commands.py  inline.py
echopulsing/services/: assistant_service.py  database.py  disabled_voice_service.py  models.py  playback_service.py  queue_manager.py  queue_state.py  runtime.py  voice_service.py  ytdlp_service.py
echopulsing/utils/: helpers.py  logger.py  player_ui.py  pyrogram_patch.py
strings/: __init__.py  helpers.py
strings/langs/: en.yml
